Creado mediante Colaboratory

--- a/My_projectC5.ipynb
+++ b/My_projectC5.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "b581da57-fd05-4387-9429-37e8c86c45ff",
       "metadata": {
         "id": "b581da57-fd05-4387-9429-37e8c86c45ff"
@@ -12,7 +12,8 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "import seaborn as sns\n"
+        "import seaborn as sns\n",
+        "import math"
       ]
     },
     {
