--- a/My_projectC5.ipynb
+++ b/My_projectC5.ipynb
@@ -18,14 +18,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "e8f6f3c6-bca9-4de1-b300-03f4545e74c2",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "e8f6f3c6-bca9-4de1-b300-03f4545e74c2",
-        "outputId": "a7cc317d-0d70-4927-b072-a97afff9c771"
+        "outputId": "3c992711-9787-4ba9-f9b8-d7545d76a248"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0    175\n",
@@ -36,9 +40,8 @@
               "Name: caa, dtype: int64"
             ]
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 8
         }
       ],
       "source": [
@@ -49,14 +52,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "acd76d40-7cad-49a2-be2d-9caec696050d",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "acd76d40-7cad-49a2-be2d-9caec696050d",
-        "outputId": "af2d1ea2-cdf5-46e1-b9e4-05c9ada8ccfd"
+        "outputId": "9edabd01-397c-44c8-c327-379b18c4182b"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "age         0\n",
@@ -76,9 +83,8 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -90,14 +96,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "2528d8b0-b307-4edd-8816-45368b0a087e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "2528d8b0-b307-4edd-8816-45368b0a087e",
-        "outputId": "17864212-107e-4b4d-ad36-bcd022ca39cc"
+        "outputId": "20221414-16c6-40a4-fc23-9c37e3822245"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "age           int64\n",
@@ -117,9 +127,8 @@
               "dtype: object"
             ]
           },
-          "execution_count": 5,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
